<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="5dp">


    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/your_name"

        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="401dp"
            android:layout_height="129dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/clouds"
            tools:src="@drawable/clouds"
            tools:srcCompat="@drawable/clouds" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/alfa_slab_one"
            android:rotation="330"
            android:text="@string/sale_25"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_item"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:textSize="15sp"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"

        app:srcCompat="@drawable/clouds"
        tools:ignore="ImageContrastCheck" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/QuantityCurrent"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/QuantityTV"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"

            android:layout_toEndOf="@id/MinusB"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PriceCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/OrderPriceTV"
            android:layout_marginStart="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/CurrencyPrice"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_below="@id/OrderPriceTV"
            android:layout_toEndOf="@id/PriceCurrent"
            android:text="@string/dollar"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/OrderPriceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/order_price"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="15sp"

            />

        <Button
            android:id="@+id/MinusB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/QuantityTV"
            android:layout_alignParentStart="true"
            android:layout_marginStart="210dp"
            android:onClick="decreaseQuamtity"

            android:text="@string/Minus"
            android:textColor="#212121"
            tools:ignore="OnClick,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/PlusB"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/QuantityTV"
            android:layout_alignParentStart="true"
            android:layout_marginStart="305dp"


            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="IncreaseQuantity"
            android:text="@string/Plus"
            android:textColor="#212121"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,UsingOnClickInXml" />

        <TextView
            android:id="@+id/QuantityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_toEndOf="@id/OrderPriceTV"
            android:text="@string/quantity"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"


            />

    </RelativeLayout>

    <Button
        android:id="@+id/AddB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="15dp"/>

</LinearLayout>